# dcmedit

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.html  README.md  macOS.plist  package-readme.txt  vcpkg.json  version.cmake
.github/workflows/: build-app.yml
assets/: LICENSE  assets.qrc
scripts/: common.py  generate_app_info.py  get_version.py  package-linux.sh  package_linux.py  package_macos.py  package_windows.py
src/: Dataset.cpp  Dataset.h  Dcmedit.cpp  Dcmedit.h  Dicom_file.cpp  Dicom_file.h  Dicom_util.cpp  Dicom_util.h  Exceptions.cpp  Exceptions.h  Version.cpp.in  Version.h  dcmedit.cpp  dcmedit.h  main.cpp
src/common/: App_info.cpp.tmpl  App_info.h  Callback_ref.cpp  Callback_ref.h  Defer_event.cpp  Defer_event.h  Dicom_util.cpp  Dicom_util.h  Event.h  Event_exceptions.cpp  Event_exceptions.h  Exceptions.cpp  Exceptions.h  IEvent.h  Progress_token.h  Scoped_callbacks.cpp  Scoped_callbacks.h  Scoped_defer.cpp  Scoped_defer.h  Scoped_disable.cpp  Scoped_disable.h  Scoped_event_handlers.cpp  Scoped_event_handlers.h  Status.cpp  Status.h
src/gui/: About_dialog.cpp  About_dialog.h  Common_actions.cpp  Common_actions.h  Context_menu.cpp  Context_menu.h  Data_element_model.cpp  Data_element_model.h  Data_element_view.cpp  Data_element_view.h  Data_element_view_menu.h  Dataset_model.cpp  Dataset_model.h  Dicom_studio.cpp  Dicom_studio.h  Dicom_view_factory.cpp  Dicom_view_factory.h  File_tree.cpp  File_tree.h  Foo_view.cpp  Foo_view.h  Foo_view_menu.h  Gui_util.cpp  Gui_util.h  Image_view.cpp  Image_view.h  Image_view_menu.cpp  Image_view_menu.h  Initial_studio.cpp  Initial_studio.h  Initial_view.cpp  Initial_view.h  Main_window.cpp  Main_window.h  Menu.h  Menu_bar.cpp  Menu_bar.h  Pan_tool.cpp  Pan_tool.h  Start_screen.cpp  (+24 more)
src/gui/dialog/: Batch_dialog.cpp  Batch_dialog.h
src/gui/menu/: Context_menu.cpp  Data_element_view_menu.h  File_menu.cpp  File_menu.h  Foo_view_menu.h  Help_menu.cpp  Help_menu.h  Image_view_menu.cpp  Image_view_menu.h  Menu.cpp  Menu.h  Menu_bar.cpp  Menu_bar.h  Studio_menu.cpp  Studio_menu.h  Tool_bar.cpp  Tool_bar.h  View_menu.cpp  View_menu.h
src/gui/studio/: Dicom_studio.cpp  Dicom_studio.h  Initial_studio.cpp  Initial_studio.h  Start_studio.cpp  Start_studio.h  Studio.cpp  Studio.h  Test_studio.cpp  Test_studio.h
src/gui/tool/: Pan_tool.cpp  Pan_tool.h  Transform_tool.cpp  Transform_tool.h  Zoom_tool.cpp  Zoom_tool.h
src/gui/view/: Add_element_dialog.cpp  Add_element_dialog.h  Data_element_view.cpp  Data_element_view.h  Dataset_table.cpp  Dataset_table.h  Dataset_view.cpp  Dataset_view.h  Edit_element_dialog.cpp  Edit_element_dialog.h  Foo_view.cpp  Foo_view.h  Image_view.cpp  Image_view.h  Sequence_table.cpp  Sequence_table.h  View.cpp  View.h  View_actions.cpp  View_actions.h  View_util.cpp  View_util.h
src/logging/: Console_logger.cpp  Console_logger.h  Log.cpp  Log.h  Logger.h
src/models/: Dataset_model.cpp  Dataset_model.h  Dicom_file.cpp  Dicom_file.h  Dicom_files.cpp  Dicom_files.h  File_tree_model.cpp  File_tree_model.h  Tool.h  Tool_bar.cpp  Tool_bar.h  Transform_tool.cpp  Transform_tool.h
src/presenters/: Add_element_presenter.cpp  Dataset_presenter.cpp  Dataset_presenter.h  Edit_all_files_presenter.cpp  Edit_value_presenter.cpp  Edit_value_presenter.h  Gui_util.h  IPresenter.h  Image_presenter.cpp  Image_presenter.h  Main_presenter.cpp  Main_presenter.h  New_file_presenter.cpp  New_file_presenter.h  Open_files_presenter.cpp  Open_files_presenter.h  Split_presenter.cpp  Split_presenter.h
src/ui/: Gui_util.cpp  Gui_util.h  IView.h  IView_factory.h  View_factory.cpp  View_factory.h
src/ui/about_dialog/: About_view.cpp  About_view.h
src/ui/add_element_dialog/: Add_element_presenter.cpp  Add_element_presenter.h  Add_element_view.cpp  Add_element_view.h  IAdd_element_view.h
src/ui/dashboard_view/: Dashboard_view.cpp  Dashboard_view.h  IDashboard_view.h
src/ui/dataset_view/: Dataset_presenter.cpp  Dataset_presenter.h  Dataset_view.cpp  Dataset_view.h  IDataset_view.h
src/ui/edit_all_files_dialog/: Edit_all_files_presenter.cpp  Edit_all_files_presenter.h  Edit_all_files_view.cpp  Edit_all_files_view.h  IEdit_all_files_view.h
src/ui/edit_value_dialog/: Edit_value_presenter.cpp  Edit_value_presenter.h  Edit_value_view.cpp  Edit_value_view.h  IEdit_value_view.h
src/ui/file_tree_view/: File_tree_presenter.cpp  File_tree_presenter.h  File_tree_view.cpp  File_tree_view.h  IFile_tree_view.h
src/ui/image_view/: IImage_view.h  Image_presenter.cpp  Image_presenter.h  Image_view.cpp  Image_view.h
src/util/: Filesystem.cpp  Filesystem.h
src/views/: About_view.cpp  About_view.h  Add_element_view.cpp  Add_element_view.h  Dashboard_view.cpp  Dashboard_view.h  Dataset_view.cpp  Dataset_view.h  Edit_all_files_view.cpp  Edit_all_files_view.h  Edit_value_view.cpp  Edit_value_view.h  File_tree_view.cpp  File_tree_view.h  IAbout_view.h  IDashboard_view.h  IDataset_view.h  IEdit_all_files_view.h  IFile_tree_view.h  IImage_view.h  IMain_view.h  INew_file_view.h  IOpen_files_view.h  ISplit_view.h  IView.h  Image_view.cpp  Image_view.h  Main_view.cpp  Main_view.h  New_file_view.cpp  New_file_view.h  Open_files_view.cpp  Open_files_view.h  Split_view.cpp  Split_view.h  View_factory.cpp  View_factory.h
test/: CMakeLists.txt  Dataset.cpp  Dcmedit_test.cpp  Dicom_util_test.cpp  Fake_version.cpp  test_constants.h
test/common/: Callback_ref_test.cpp  Dicom_util_test.cpp  Event_test.cpp  Scoped_callbacks_test.cpp  Scoped_defer_test.cpp  Scoped_disable_test.cpp
test/gui/: Pan_tool_test.cpp  Zoom_tool_test.cpp
test/gui/tool/: Transform_tool_test.cpp
test/mocks/: Add_element_view_mock.h  Dataset_view_mock.h  File_tree_view_mock.h  Image_view_mock.h  Main_view_mock.h  Open_files_view_mock.h  Progress_token_stub.h  Progress_view_mock.h  Split_view_mock.h  View_factory_mock.h
test/models/: Dicom_files_test.cpp  Transform_tool_test.cpp
test/test_data/: new-file.dcm  one-tag.dcm
test/test_utils/: Check_event.h  Temp_dir.cpp  Temp_dir.h
test/testdata/Dataset/: 1.dcm  2.dcm  3.dcm  4.dcm
(+36 files in other folders)
